--- a/app/graMemo.html
+++ b/app/graMemo.html
@@ -8,6 +8,5 @@ title: barborka
 <ul id="memoGame">
 	
 </ul>
-<ul id="imagesCache">
-	
-</ul>
+<ul id="imagesCache" style="display: none;">
+<li><img width="160" src="/assets/img/thiles/boardThile_1.png" alt="memo1"></li><li><img width="160" src="/assets/img/thiles/boardThile_2.png" alt="memo2"></li><li><img width="160" src="/assets/img/thiles/boardThile_3.png" alt="memo3"></li><li><img width="160" src="/assets/img/thiles/boardThile_4.png" alt="memo4"></li><li><img width="160" src="/assets/img/thiles/boardThile_5.png" alt="memo5"></li><li><img width="160" src="/assets/img/thiles/boardThile_6.png" alt="memo6"></li></ul>
