--- a/app/index.html
+++ b/app/index.html
@@ -2,29 +2,5 @@
 layout: default
 title: barborka
 ---
-<img src="/assets/img/mask8white.png" alt="" style="display:none;">
-<ul class="tabs">
-	<li data-num="1"><h3>GÓRNICZE<br/>MEMO</h3></li>
-	<li data-num="2"><h3><span/>SŁOWNIK</h3></li>
-	<li data-num="3"><h3><span/>RÓŻNICE</h3></li>
-</ul>
-
-<ul class="content">
-	<li data-num="1"> <p>
-	<strong>Górnicze Memo</strong>
-	to gra, która pozwoli zapamiętać najważniejsze obrazy, związane z&nbsp;górnictwem. Po odnalezieniu  pary wybranej karty, odkrywa się nazwa obiektu, który jest na niej przedstawiony. Karty rozstawione są na&nbsp;lewej stronie, w równych rzędach. Każde rozdanie, to 8 kart, czyli 4 pary. Po kliknięciu na lewą stronę karty, odkrywa się jej prawa strona. W przypadku błędnego ruchu, karty ponownie się zakrywają. Poprawne odkrycie wszystkich par powoduje przejście do następnej gry. W razie trudności możliwe jest przejście do następnej gry za pomocą strzałki. Gra składa się łącznie z 36 różnych kart, które dla jednej gry dobierają się automatycznie.<br/>
-	<strong>Powodzenia!</strong>
-	</p>
-	<button onClick="location.href='graMemo.html'">graj</button></li>
-	<li data-num="2"> <p>
-	<strong>Słownik</strong> to gra, dzięki której poznajemy najważniejsze słowa związane z górnictwem. Pod&nbsp;każdym obrazem pojawiają się 4 różne słowa, z&nbsp;których tylko jest poprawne. Po kliknięciu na błędne słowo, pojawia się ostrzeżenie o popełnieniu błędu. Kliknięcie w poprawne słowo powoduje przejście do następnej gry. słowa dobierają się automatycznie, cała gra składa się z&nbsp;36 różnych słów i obrazów.<br/>
-	<strong>Powodzenia!</strong>
-	</p>
-	<button onClick="location.href='graSlownik.html'">graj</button>
-	</li>
-	<li data-num="3"> <p>
-	<strong>RÓŻNICE</strong> <br/>
-	<strong>Powodzenia!</strong>
-	</p>
-	<button onClick="location.href='graRoznice.html'">graj</button></li>
-</ul>
+<h1>Wkrótce zaczynamy!</h1>
+<img class="full" src="/assets/img/rodzinka.jpg" alt="">
