--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: barborka
+class: home
 ---
 <h1>Wkrótce zaczynamy!</h1>
 <img class="full" src="/assets/img/rodzinka.jpg" alt="">
