--- a/app/infografiki/index.html
+++ b/app/infografiki/index.html
@@ -23,12 +23,8 @@ TRADYCJE</h3></li>
 </ul>
 
 <div id="infoContent">
-<img src="/assets/img/info/
-info00.png">
-<img src="/assets/img/info/
-info01.png">
-<img src="/assets/img/info/
-info02.png">
-<img src="/assets/img/info/
-info03.png"><img src="/assets/img/gry/thiles/karta_002.png" name="SZPADA">
+<img src="/assets/img/info/info00.png">
+<img src="/assets/img/info/info01.png">
+<img src="/assets/img/info/info02.png">
+<img src="/assets/img/info/info03.png">
 </div>
