--- a/app/gry/index.html
+++ b/app/gry/index.html
@@ -26,7 +26,8 @@ class: gry
 	</li>
 	<li data-num="3"> <p> 
 	<strong>RÓŻNICE</strong> <br/>
-	<strong>Powodzenia!</strong>
+	gra w przygotowaniu ...
+	<strong>zaprazamy do pozostałych</strong>
 	</p>
-	<button onClick="location.href='/barborka/gry/roznice/'">graj</button></li>
+	<!-- <button onClick="location.href='/barborka/gry/roznice/'">graj</button> --></li>
 </ul>
