--- a/app/infografiki/index.html
+++ b/app/infografiki/index.html
@@ -1,30 +1,51 @@
 ---
 layout: default
 title: barborka
-menu: 3
+menu: 1
 class: info
 ---
 
 <img src="/assets/img/gry/mask8white.png" alt="" style="display:none;">
 <ul class="tabs">
-	<li data-info="1"><h3>DZIEŃ<br/>
-GÓRNIKA</h3></li>
-	<li data-info="2"><h3>HISTORIA<br/>
-WĘGLA</h3></li>
-	<li data-info="3"><h3>GÓRNICZE<br/>
-TRADYCJE</h3></li>
+	<li><h3>DZIEŃ<br/>GÓRNIKA</h3></li>
+	<li><h3>HISTORIA<br/>WĘGLA</h3></li>
+	<li><h3>GÓRNICZE<br/>TRADYCJE</h3></li>
 </ul>
+
+<p>Ilustrowana infografika przedstawia kolejne działania górnika - pana Karola, w ciągu swojego dnia pracy. Poznajemy
+<br/>tajniki pracy pod ziemią, śledzimy wydarzenia krok po kroku, od pobudki aż po zasłużony odpoczynek.
+<br/>Po najechaniu myszą na wyróżnione hasła, pojawia się ich wytłumaczenie.</p>
 
 <ul class="content">
-	<li class="selected"> Ilustrowana infografika przedstawia kolejne działania górnika - pana Karola, w ciągu swojego dnia pracy. Poznajemy
-<br/>tajniki pracy pod ziemią, śledzimy wydarzenia krok po kroku, od pobudki aż po zasłużony odpoczynek.
-<br/>Po najechaniu myszą na wyróżnione hasła, pojawia się ich wytłumaczenie.
- </li>
+	<li class="selected"> 
+ 		<div class="info info_2">
+			<img src="/assets/img/info/02/01.png">
+			<img src="/assets/img/info/02/02.png">
+			<img src="/assets/img/info/02/03.png">
+			<img src="/assets/img/info/02/04.png">
+			<img src="/assets/img/info/02/05.png">
+			<img src="/assets/img/info/02/06.png">
+			<img src="/assets/img/info/02/07.png">
+			<img src="/assets/img/info/02/08.png">
+			<img src="/assets/img/info/02/09.png">
+			<img src="/assets/img/info/02/10.png">
+			<img src="/assets/img/info/02/11.png">
+			<img src="/assets/img/info/02/12.png">
+			<img src="/assets/img/info/02/13.png">
+			<h2>Krótka historia węgla</h2>
+		</div>
+	</li>
+	<li> 
+ 		<div class="info info_3">
+			<img src="/assets/img/info/03/01.png">
+			<img src="/assets/img/info/03/02.png">
+			<img src="/assets/img/info/03/03.png">
+			<img src="/assets/img/info/03/04.png">
+			<img src="/assets/img/info/03/05.png">
+			<img src="/assets/img/info/03/06.png">
+			<img src="/assets/img/info/03/07.png">
+			<img src="/assets/img/info/03/08.png">
+			<h2>Górnicze tradycje</h2>
+		</div>
+	</li>
 </ul>
-
-<div id="infoContent">
-<img src="/assets/img/info/info00.png">
-<img src="/assets/img/info/info01.png">
-<img src="/assets/img/info/info02.png">
-<img src="/assets/img/info/info03.png">
-</div>
