--- a/app/infografiki/index.html
+++ b/app/infografiki/index.html
@@ -9,7 +9,7 @@ class: info
 <ul class="tabs">
 	<li onClick="location.href='./dzien-gornika/'"><h3>DZIEŃ<br/>GÓRNIKA</h3></li>
 	<li onClick="location.href='./historia-wegla/'"><h3>HISTORIA<br/>WĘGLA</h3></li>
-	<li onClick="location.href='./ornicze-tradycje/'"><h3>GÓRNICZE<br/>TRADYCJE</h3></li>
+	<li onClick="location.href='./gornicze-tradycje/'"><h3>GÓRNICZE<br/>TRADYCJE</h3></li>
 </ul>
 
 <p>Ilustrowana infografika przedstawia kolejne działania górnika - pana Karola, w ciągu swojego dnia pracy. Poznajemy
