--- a/app/gry/index.html
+++ b/app/gry/index.html
@@ -7,7 +7,7 @@ class: gry
 <img src="/assets/img/gry/mask8white.png" alt="" style="display:none;">
 <ul class="tabs">
 	<li data-num="1"><h3>GÓRNICZE<br/>MEMO</h3></li>
-	<li data-num="2"><h3><span/>SŁOWNIK</h3></li>
+	<li data-num="2"><h3>GÓRNICZE<br>DYNKSY</h3></li>
 	<li data-num="3"><h3><span/>RÓŻNICE</h3></li>
 </ul>
 
