--- a/app/gry/memo.html
+++ b/app/gry/memo.html
@@ -38,4 +38,16 @@ class: memo
 <li><img src="/assets/img/gry/thiles/karta_027.png" alt="memo_27"></li>
 <li><img src="/assets/img/gry/thiles/karta_028.png" alt="memo_28"></li>
 <li><img src="/assets/img/gry/thiles/karta_029.png" alt="memo_29"></li>
+<li><img src="/assets/img/gry/thiles/karta_030.png" alt="memo_30"></li>
+<li><img src="/assets/img/gry/thiles/karta_031.png" alt="memo_31"></li>
+<li><img src="/assets/img/gry/thiles/karta_032.png" alt="memo_32"></li>
+<li><img src="/assets/img/gry/thiles/karta_033.png" alt="memo_33"></li>
+<li><img src="/assets/img/gry/thiles/karta_034.png" alt="memo_34"></li>
+<li><img src="/assets/img/gry/thiles/karta_035.png" alt="memo_35"></li>
+<li><img src="/assets/img/gry/thiles/karta_036.png" alt="memo_36"></li>
+<li><img src="/assets/img/gry/thiles/karta_037.png" alt="memo_37"></li>
+<li><img src="/assets/img/gry/thiles/karta_038.png" alt="memo_38"></li>
+<li><img src="/assets/img/gry/thiles/karta_039.png" alt="memo_39"></li>
+<li><img src="/assets/img/gry/thiles/karta_040.png" alt="memo_40"></li>
+<li><img src="/assets/img/gry/thiles/karta_041.png" alt="memo_41"></li>
 </ul>
