--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: barborka
+title: barbórka.edu.pl
 class: home
 ---
 <img class="full" src="/assets/img/rodzinka.jpg" alt="">
