--- a/app/infografiki/dzien-gornika.html
+++ b/app/infografiki/dzien-gornika.html
@@ -1,30 +1,66 @@
 ---
 layout: info
-title: barborka - dzień górnika
+title: barbórka - dzień górnika
 menu: 1
 class: info_1
 ---
-
 			<img src="/assets/img/info/01/01_01.png">
 			<img src="/assets/img/info/01/01_02.png">
 			<img src="/assets/img/info/01/01_03.png">
-			<img src="/assets/img/info/01/01_04.png">
-			
+			<img src="/assets/img/info/01/01_04.png">		
 			<img src="/assets/img/info/01/02_01.png">
 			<img src="/assets/img/info/01/02_02.png">
 			<img src="/assets/img/info/01/02_03.png">
 			<img src="/assets/img/info/01/02_04.png">
-
 			<img src="/assets/img/info/01/03_01.png">
 			<img src="/assets/img/info/01/03_02.png">
 			<img src="/assets/img/info/01/03_03.png">
 			<img src="/assets/img/info/01/03_04.png">
-
 			<img src="/assets/img/info/01/04_01.png">
 			<img src="/assets/img/info/01/04_02.png">
 			<img src="/assets/img/info/01/04_03.png">
 			<img src="/assets/img/info/01/04_04.png">
+			<img src="/assets/img/info/01/05_01.png">			
 
-			<img src="/assets/img/info/01/05_01.png">
-			<img src="/assets/img/info/01/05_02.png">
-			
+<div class="box" data-img=0 style="top: 1.30%; left: 61.5%;">
+<button class="message">[ --- 0 --- ]</button>
+<div class="claud"><span class="dash"></span>
+Familok to tradycyjny blok 
+<br>mieszkalny na górniczym osiedlu.</div>
+</div>
+
+<div class="box" data-img=5  style="top: 34.14%; left: 69%;">
+<button class="message">[ -- 1 -- ]</button>
+<div class="claud"><span class="dash"></span>
+Sztygar  to osoba która pełni
+<br>w górnictwie funkcje kierownika.
+<br>Sprawuje między innymi
+<br>dozór techniczny.</div>
+</div>
+
+<div class="box" data-img=6  style="top: 37.78%;left: 36%;">
+<button class="message">[ -------- 2 -------- ]</button>
+<div class="claud"><span class="dash"></span>
+To wielka sala na terenie kopalni.
+<br>Z jej sufitu zwisają łańcuszki,
+<br>na których górnicy zostawiają
+<br>swoje ubrania przebierając się
+<br>w robocze.</div>
+</div>
+
+<div class="box" data-img=8  style="top: 50.15%;
+left: 35%;">
+<button class="message">[ --- 4 --- ]</button>
+<div class="claud"><span class="dash"></span>
+To miejsce, w którym każdy górnik
+<br>dostaje oznaczoną numerem
+<br>lampę i aparat ratunkowy. </div>
+</div>
+
+<div class="box" data-img=10 style="top: 60.75%;left: 25%;">
+<button class="message">[ --- 5 --- ]</button>
+<div class="claud"><span class="dash"></span>
+Inaczej nazywana klatką, to
+<br>specjalna winda, którą górnicy
+<br>zjeżdżają pod ziemię.</div>
+</div>
