--- a/app/infografiki/index.html
+++ b/app/infografiki/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: barborka
+title: barbórka - infografiki
 menu: 1
 class: info
 ---
@@ -16,7 +16,3 @@ class: info
 <br/>tajniki pracy pod ziemią, śledzimy wydarzenia krok po kroku, od pobudki aż po zasłużony odpoczynek.
 <br/>Po najechaniu myszą na wyróżnione hasła, pojawia się ich wytłumaczenie.</p>
 
-<ul class="content">
-	<li> 
- 	</li>
-</ul>
