--- a/app/gry/index.html
+++ b/app/gry/index.html
@@ -1,14 +1,14 @@
 ---
 layout: default
-title: barborka
+title: barbórka - gry
 menu: 2
 class: gry
 ---
 <img src="/assets/img/gry/mask8white.png" alt="" style="display:none;">
 <ul class="tabs">
-	<li data-num="1"><h3>GÓRNICZE<br/>MEMO</h3></li>
+	<li data-num="1"><h3>GÓRNICZE<br>MEMO</h3></li>
 	<li data-num="2"><h3>GÓRNICZE<br>DYNKSY</h3></li>
-	<li data-num="3"><h3><span/>RÓŻNICE</h3></li>
+	<li data-num="3"><h3>SŁOWNIK<br>DYNKSÓW</h3></li>
 </ul>
 
 <ul class="content">
@@ -22,12 +22,12 @@ class: gry
 	<strong>Słownik</strong> to gra, dzięki której poznajemy najważniejsze słowa związane z górnictwem. Pod&nbsp;każdym obrazem pojawiają się 4 różne słowa, z&nbsp;których tylko jest poprawne. Po kliknięciu na błędne słowo, pojawia się ostrzeżenie o popełnieniu błędu. Kliknięcie w poprawne słowo powoduje przejście do następnej gry. słowa dobierają się automatycznie, cała gra składa się z&nbsp;36 różnych słów i obrazów.<br/>
 	<strong>Powodzenia!</strong>
 	</p>
-	<button onClick="location.href='./slownik/'">graj</button>
+	<button onClick="location.href='./dynksy/'">graj</button>
 	</li>
-	<li data-num="3"> <p> 
-	<strong>RÓŻNICE</strong> <br/>
+	<li data-num="3" ><!--  <p> 
+	<strong>SŁOWNIK DYNKSÓW</strong> <br/>
 	gra w przygotowaniu ...
 	<strong>zaprazamy do pozostałych</strong>
-	</p>
+	</p> -->
 	<!-- <button onClick="location.href='/barborka/gry/roznice/'">graj</button> --></li>
 </ul>
