--- a/app/infografiki/gornicze-tradycje.html
+++ b/app/infografiki/gornicze-tradycje.html
@@ -4,13 +4,82 @@ title: barbórka - górnicze tradycje
 menu: 1
 class: info_2
 ---
+<img src="/assets/img/info/02/01_01.png">
+<img src="/assets/img/info/02/01_02.png">
+<img src="/assets/img/info/02/01_03.png">
+<img src="/assets/img/info/02/01_04.png">
+<img src="/assets/img/info/02/02_01.png">
+<img src="/assets/img/info/02/02_02.png">
+			
 
-			<img src="/assets/img/info/02/01_01.png">
-			<img src="/assets/img/info/02/01_02.png">
-			<img src="/assets/img/info/02/01_03.png">
-			<img src="/assets/img/info/02/01_04.png">
-			
-			<img src="/assets/img/info/02/02_01.png">
-			<img src="/assets/img/info/02/02_02.png">
-			
-			
+<div class="box" data-img=1 style="top: 9.2%;left: 40%;">
+	<button class="message">[ --- 1 --- ]</button>
+	<div class="claud"><span class="dash"></span>
+	Była poprzedniczką dzisiejszego
+	<br/>kasku. Chroniła głowę przed
+	<br/>kapiącą wodą i kawałkami węgla.
+	</div>
+</div>			
+
+<div class="box" data-img=2 style="top: 10.55%; left: 71%;">
+	<button class="message">[ --- 2 --- ]</button>
+	<div class="claud"><span class="dash"></span>
+		Chroniła przed wiatrem 
+		<br/>kapiącą wodą.
+	</div>
+</div>
+
+<div class="box" data-img=3 style="top: 17.46%; left: 10%;">
+	<button class="message">[ --- 3 --- ]</button>
+	<div class="claud"><span class="dash"></span>
+		Spodnie zaopatrzone w liczne
+		<br/>kieszenie, w których górnik mógł
+		<br/>chować i przenosić narzędzia.
+	</div>
+</div>
+
+<div class="box" data-img=4 style="top: 17.15%;left: 40%;">
+	<button class="message">[ --- 4 --- ]</button>
+	<div class="claud"><span class="dash"></span>
+		Skórzany fartuch wiązany
+		<br/>w biodrach - można było na nim
+		<br/>siedzieć albo klęczeć, chroniąc
+		<br/>ubrania przed zamoczeniem.
+		<br/>Skóra miała też inne zadania,
+		<br/>dawniej wręczano na niej górni-
+		<br/>kom wypłatę, wymierzano nią
+		<br/>karę. Służyła też jako obrus
+		<br/>podczas śniadania. W przypadku
+		<br/>nieposłuszeństwa górników,
+		<br/>byli oni pozbawiani możliwości
+		<br/>niszenia skóry.
+	</div>
+</div>
+
+<div class="box" data-img=5 style="top: 24.8%; left: 10%;">
+	<button class="message">[ --- 5 --- ]</button>
+	<div class="claud"><span class="dash"></span>
+		Czako to górnicza czapka. Kolor
+		<br/>przyłączonego do czapki pióropu-
+		<br/>szu odpowiada stanowisku, na
+		<br/>jakim pracuje jej właściciel.
+	</div>
+</div>
+
+<div class="box" data-img=6 style="top: 33.8%;left: 57%;">
+	<button class="message">[ --- 6 --- ]</button>
+	<div class="claud"><span class="dash"></span>
+		Święta Barbara to patronka
+		<br/>górników, ciężkiej pracy, dobrej
+		<br/>śmierci. Była męczennicą wiary
+		<br/>chrześcijańskiej. Przedstawiana
+		<br/>jest w długiej sukni, z koroną na 
+		<br/>głowie. Często z wieżą, w której
+		<br/>była więziona. legenda mówi, że
+		<br/>tuż przed męczeńską śmiercią
+		<br/>anioł przybył do św. Barbary
+		<br/>z komunią świętą. Świętą przed-
+		<br/>stawia się również z mieczem, od
+		<br/>którego poniosła śmierć.
+	</div>
+</div>
