--- a/app/infografiki/historia-wegla.html
+++ b/app/infografiki/historia-wegla.html
@@ -4,17 +4,191 @@ title: barbórka - historia węgla
 menu: 1
 class: info_3
 ---
+<img src="/assets/img/info/03/01_01.png">
+<img src="/assets/img/info/03/01_02.png">
+<img src="/assets/img/info/03/01_03.png">
+<img src="/assets/img/info/03/01_04.png">
+<img src="/assets/img/info/03/02_01.png">
+<img src="/assets/img/info/03/02_02.png">
+<img src="/assets/img/info/03/02_03.png">
+<img src="/assets/img/info/03/02_04.png">
+<img src="/assets/img/info/03/03_01.png">
+<img src="/assets/img/info/03/03_02.png">	
 
-			<img src="/assets/img/info/03/01_01.png">
-			<img src="/assets/img/info/03/01_02.png">
-			<img src="/assets/img/info/03/01_03.png">
-			<img src="/assets/img/info/03/01_04.png">
-			
-			<img src="/assets/img/info/03/02_01.png">
-			<img src="/assets/img/info/03/02_02.png">
-			<img src="/assets/img/info/03/02_03.png">
-			<img src="/assets/img/info/03/02_04.png">
 
-			<img src="/assets/img/info/03/03_01.png">
-			<img src="/assets/img/info/03/03_02.png">
-			
+<div class="box" data-img=1 style="top: 21.9%;left: 74%;">
+	<button class="message">[ --- 1 --- ]</button>
+	<div class="claud"><span class="dash"></span>
+		Zapłata dla właściciela ziemi, na
+		<br/>której pozyskiwano węgiel, otrzymy-
+		<br/>wał 1/10 całego wydobycia.
+	</div>
+</div>
+
+<div class="box" data-img=2 style="top: 28.45%; left: 33%;">
+	<button class="message">[ --- 2 --- ]</button>
+	<div class="claud"><span class="dash"></span>
+		To kopalnia, w której pracuje się
+		<br/>na powierzchni ziemi, a nie pod nią.
+	</div>
+</div>
+
+<div class="box" data-img=3 style="top: 45.25%; left: 43%;">
+	<button class="message">[ --- 3 --- ]</button>
+	<div class="claud"><span class="dash"></span>
+		Zadaniem konia w kopalni, było
+		<br/>ciągnięcie wózków napełnionych
+		<br/>węglem. Ich praca była bardzo ciężka.
+	</div>
+</div>	
+
+<div class="box" data-img=4 style="top: 45.25%; left: 80%;">
+	<button class="message">[ --- 4 --- ]</button>
+	<div class="claud"><span class="dash"></span>
+		Zajmował się segregowaniem,
+		<br/>odrzucał śmieci i węgiel który nie
+		<br/>nadawał się do wydobycia.
+	</div>
+</div>	
+
+<div class="box" data-img=5 style="top: 50.1%; left: 4%;">
+	<button class="message">[ --- 5 --- ]</button>
+	<div class="claud"><span class="dash"></span>
+		Jego zadaniem było wożenie
+		<br/>wózków wypełnionych węglem.
+	</div>
+</div>		
+
+<div class="box" data-img=6 style="top: 53.74%;left: 29%;">
+	<button class="message">[ --- 6 --- ]</button>
+	<div class="claud"><span class="dash"></span>
+		Zajmował się ładowaniem
+		<br/>urobku do wózków.
+	</div>
+</div>		
+
+<div class="box" data-img=7 style="top: 53.74%;left: 58%;">
+	<button class="message">[ --- 7 --- ]</button>
+	<div class="claud"><span class="dash"></span>
+		Jego narzędziem jest kilof,
+		<br/>a zadaniem rąbanie ściany węgla.
+	</div>
+</div>
+
+
+<div class="box" data-img=8 style="top: 56.32%;left: 40.5%;">
+	<button class="message">[ --- 8 --- ]</button>
+	<div class="claud"><span class="dash"></span>
+Znajdowała się zawsze blisko
+<br/>górniczego miasteczka. Górnicy
+<br/>do pracy chodzili pieszo.	
+	</div>
+</div>
+
+<div class="box" data-img=9 style="top: 58.9%;left: 40.5%;">
+	<button class="message">[ --- 9 --- ]</button>
+	<div class="claud"><span class="dash"></span>
+Domy inżynierów i wyższych
+<br/>urzędników były większe,
+<br/>znajdowały się bliżej kopalni.
+	</div>
+</div>
+
+<div class="box" data-img=10 style="top: 64.32%;left: 40.5%;">
+	<button class="message">[ --- 10 --- ]</button>
+	<div class="claud"><span class="dash"></span>
+Znajdował się w centrum miaste-
+<br/>czka. Na jego wieży tkwił dzwon,
+<br/>który zwoływał górników do pracy.
+	</div>
+</div>
+
+
+<div class="box" data-img=11 style="top: 66.35%;left: 8.5%;">
+	<button class="message">[ --- 11 --- ]</button>
+	<div class="claud"><span class="dash"></span>
+Mniejsze, niż domy inżynierów,
+<br/>postawione były dalej od kopalni.
+	</div>
+</div>
+
+<div class="box" data-img=12 style="top: 66.35%;left: 30.5%;">
+	<button class="message">[ --- 12 --- ]</button>
+	<div class="claud"><span class="dash"></span>
+Żony górników uczyły się tu
+<br/>fachu matki, gospodyni domowej.
+	</div>
+</div>
+
+<div class="box" data-img=13 style="top: 66.35%;left: 50.5%;">
+	<button class="message">[ --- 13 --- ]</button>
+	<div class="claud"><span class="dash"></span>
+Szkoła nauczania początkowego,
+<br/>często po jej opuszczeniu dzieci
+<br/>zaczynały pracować na kopalni.
+	</div>
+</div>
+
+<div class="box" data-img=14 style="top: 95.6%;left: 7.5%;">
+	<button class="message">[ --- 14 --- ]</button>
+	<div class="claud"><span class="dash"></span>
+Błękitne paliwo, które znajduje
+<br/>się pod skorupą Ziemi. Popu-
+<br/>larny zastępca węgla.
+	</div>
+</div>
+
+<div class="box" data-img=15 style="top: 95.6%;left: 28.5%;">
+	<button class="message">[ --- 15 --- ]</button>
+	<div class="claud"><span class="dash"></span>
+Energia jest pozyskiwana dzięki
+<br/>wprawianiu skrzydeł wiatraka
+<br/>w ruch.
+	</div>
+</div>
+
+<div class="box" data-img=16 style="top: 95.6%;left: 50.5%;">
+	<button class="message">[ --- 16 --- ]</button>
+	<div class="claud"><span class="dash"></span>
+Energia wytwarza się dzięki
+<br/>ruchowi wody. Przykładem jest
+<br/>płynąca rzeka, albo koło wodne. 
+	</div>
+</div>
+
+<div class="box" data-img=17 style="top: 95.6%;left: 71.5%;">
+	<button class="message">[ --- 17 --- ]</button>
+	<div class="claud"><span class="dash"></span>
+Dzięki specjalnym kolektorom
+<br/>słonecznym pozyskuje się 
+<br/>energię z siły promieni słońca.
+	</div>
+</div>
+
+
+<div class="box" data-img=18 style="top: 98.8%;left: 12.5%;">
+	<button class="message">[ --- 18 --- ]</button>
+	<div class="claud"><span class="dash"></span>
+Palna ciecz wydobywana 
+<br/>z głębi Ziemi.
+	</div>
+</div>
+
+<div class="box" data-img=19 style="top: 98.8%;left: 40.5%;">
+	<button class="message">[ --- 19 --- ]</button>
+	<div class="claud"><span class="dash"></span>
+Energia pozyskiwana jest
+<br/>podczas reakcji chemicznej
+<br/>przemian cząsteczek jądrowych.
+	</div>
+</div>
+
+<div class="box" data-img=20 style="top: 98.8%;left: 67.5%;">
+	<button class="message">[ --- 20 --- ]</button>
+	<div class="claud"><span class="dash"></span>
+Do skał wtłaczana jest z wielką
+<br/>siłą zimna woda. Po kontakcie
+<br/>z gorącą skałą woda się ogrzewa
+<br/>produkując energię.
+	</div>
+</div>
