--- a/app/index.html
+++ b/app/index.html
@@ -3,4 +3,4 @@ layout: default
 title: barbórka.edu.pl
 class: home
 ---
-<img class="full" src="/assets/img/rodzinka.jpg" alt="">
+<img class="full" src="/assets/img/rodzinka.png" alt="rodzinka">
