--- a/app/infografiki/index.html
+++ b/app/infografiki/index.html
@@ -12,7 +12,9 @@ class: info
 	<li onClick="location.href='./gornicze-tradycje/'"><h3>GÓRNICZE<br/>TRADYCJE</h3></li>
 </ul>
 
-<p>Ilustrowana infografika przedstawia kolejne działania górnika - pana Karola, w ciągu swojego dnia pracy. Poznajemy
-<br/>tajniki pracy pod ziemią, śledzimy wydarzenia krok po kroku, od pobudki aż po zasłużony odpoczynek.
-<br/>Po najechaniu myszą na wyróżnione hasła, pojawia się ich wytłumaczenie.</p>
+<p>Ilustrowane infografiki przedstawiają kolejne etapy pracy górnika, opowiadają o tym jak powstał węgiel
+<br/>i opisują tradycje górników. Strony są interaktywne, po najechaniu myszą na trudne pojęcia, które w tekście
+<br/>zostały pogrubione, pojawia się ich definicja.
+<br/>Zapraszamy na ilustrowaną wycieczkę po górnictwie!
+</p>
 
